--- a/reactjs-accueba-main/src/navbarStyles.css
+++ b/reactjs-accueba-main/src/navbarStyles.css
@@ -6,6 +6,10 @@ body {
     margin: 0;
 }
 
+.container{
+    align-items: center;
+    padding-top: 10px;
+}
 .nav
 {
     background-color: #1183C3;
