--- a/reactjs-accueba-main/src/navbarStyles.css
+++ b/reactjs-accueba-main/src/navbarStyles.css
@@ -44,3 +44,58 @@ body {
 .nav li:hover{
     background-color: dodgerblue;
 }
+
+.overlay{
+    background-color: rgba((red), green, blue, alpha);
+    position: fixed;
+    width: 100;
+    height: 100;
+}
+
+.modalContainer{
+    max-width: 600px;
+    width: 100%;
+    position: fixed;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    background-color: #ffffff;
+    box-shadow: 0px 0px 18px 0px rgba(0, 0, 0, 0.75);
+    border-radius: 8px;
+}
+
+.modalRight{
+    width: 100%;
+}
+
+.closeBtn{
+    position: fixed;
+    top: 8px;
+    right: 8px;
+}
+
+.content {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    margin-top: 3rem;
+    padding: 1rem 2rem;
+  }
+
+  .btnContainer {
+    display: flex;
+    padding: 1rem 1rem;
+  }
+  .btnContainer button {
+    width: 100%;
+    margin: .5rem;
+    padding: 16px 0;
+    border: 1px solid #00a4b9;
+  }
+  
+  .btnPrimary {
+    background-color: #00a4b9;
+    color: white;
+  }
