--- a/reactjs-accueba-main/src/styles.css
+++ b/reactjs-accueba-main/src/styles.css
@@ -43,13 +43,13 @@ body {
 
 .nav ul{
     padding: 0;
-    margin: 0;
     list-style: none;
     display: flex;
-    gap: 1rem;
+    gap: 5rem;
     margin-top: 68px;
     font-size: 20px;
     padding: .25rem;
+    margin-right: 100px;
 }
 
 .nav a{
@@ -98,6 +98,7 @@ body {
     position: fixed;
     top: 8px;
     right: 8px;
+    cursor: pointer;
 }
 
 .content {
